--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,14 +11,16 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet" />
     <!-- Daisy UI CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.24/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
       .font-poppins {
         font-family: "Poppins", sans-serif;
       }
     </style>
-    <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
         theme: {
@@ -57,7 +59,7 @@
               </div>
               <ul
                 tabindex="0"
-                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-40 mt-3 w-52 p-2 shadow">
                 <li><a>Home</a></li>
                 <li><a>Shop</a></li>
                 <li><a>News</a></li>
@@ -232,9 +234,277 @@
           </div>
         </div>
       </section>
+      <!-- Latest News Section -->
+      <section class="my-44">
+        <div>
+          <h1 class="font-bold text-5xl text-center mb-16">Latest News</h1>
+          <div class="flex flex-col md:flex-row justify-around px-4 gap-8">
+            <!-- Card 1 -->
+            <div class="card bg-base-100 w-full shadow-xl">
+              <figure class="pt-10">
+                <img src="images/others/latest1.png" alt="Shoes" class="rounded-xl w-full p-5" />
+              </figure>
+              <div class="card-body text-left">
+                <h2 class="card-title text-2xl font-semibold">Ducati XDIAVEL S-73</h2>
+                <p class="text-gray-600">
+                  Lorem ipsum dolor sit amet, consectetur <br />
+                  adipiscing elit. Lacus, fermentum amet <br />
+                  faucibus sed id nisi lectus at.
+                </p>
+                <div class="card-actions">
+                  <button class="mt-10">
+                    <a
+                      class="btn btn-lg btn-outline border-primary-color text-primary-color border-2 hover:bg-primary-color hover:border-0"
+                      >Read More</a
+                    >
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!-- Card 2 -->
+            <div class="card bg-base-100 w-full shadow-xl">
+              <figure class="pt-10">
+                <img src="images/others/latest2.png" alt="Shoes" class="rounded-xl w-full p-5" />
+              </figure>
+              <div class="card-body text-left">
+                <h2 class="card-title text-2xl font-semibold">Motorcycles & Scooters</h2>
+                <p class="text-gray-600">
+                  Lorem ipsum dolor sit amet, consectetur <br />
+                  adipiscing elit. Lacus, fermentum amet <br />
+                  faucibus sed id nisi lectus at.
+                </p>
+                <div class="card-actions">
+                  <button class="mt-10">
+                    <a
+                      class="btn btn-lg btn-outline border-primary-color text-primary-color border-2 hover:bg-primary-color hover:border-0"
+                      >Read More</a
+                    >
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!-- Card 3 -->
+            <div class="card bg-base-100 w-full shadow-xl">
+              <figure class="pt-10">
+                <img src="images/others/latest3.png" alt="Shoes" class="rounded-xl w-full p-5" />
+              </figure>
+              <div class="card-body text-left">
+                <h2 class="card-title text-2xl font-semibold">2021 Honda CBR500R</h2>
+                <p class="text-gray-600">
+                  Lorem ipsum dolor sit amet, consectetur <br />
+                  adipiscing elit. Lacus, fermentum amet <br />
+                  faucibus sed id nisi lectus at.
+                </p>
+                <div class="card-actions">
+                  <button class="mt-10">
+                    <a
+                      class="btn btn-lg btn-outline border-primary-color text-primary-color border-2 hover:bg-primary-color hover:border-0"
+                      >Read More</a
+                    >
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Happy Client Says Review -->
+      <section class="mb-44">
+        <h1 class="font-bold text-5xl text-center mb-16">
+          Happy <span class="text-primary-color">Clients says</span>
+        </h1>
+        <!-- Review Card Container-->
+        <div class="flex px-4 flex-col md:flex-row gap-11">
+          <!-- Card1 -->
+          <div
+            class="flex flex-col justify-center items-center border-2 shadow-md py-10 px-5 space-y-6 rounded-md">
+            <div class="avatar">
+              <div class="w-24 rounded-full mb-3">
+                <img src="images/others/user-1.png" />
+              </div>
+            </div>
+            <p class="text-gray-500 text-center w-4/5">
+              Slate helps you see how many more days you need to work to reach your financial goal
+              for the month and year.
+            </p>
+            <!-- Rating -->
+            <div class="rating">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+                checked="checked" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div>
+            <small class="text-sm font-semibold text-[#23A6F0]">Regina Miles</small>
+            <small class="text-sm font-semibold">Banker</small>
+          </div>
+          <!-- Card 2 -->
+          <div
+            class="flex flex-col justify-center items-center border-2 shadow-md py-10 px-5 space-y-6 rounded-md">
+            <div class="avatar">
+              <div class="w-24 rounded-full mb-3">
+                <img src="images/others/user-2.png" />
+              </div>
+            </div>
+            <p class="text-gray-500 text-center w-4/5">
+              Slate helps you see how many more days you need to work to reach your financial goal
+              for the month and year.
+            </p>
+            <!-- Rating -->
+            <div class="rating">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+                checked="checked" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div>
+            <small class="text-sm font-semibold text-[#23A6F0]">Regina Miles</small>
+            <small class="text-sm font-semibold">Banker</small>
+          </div>
+          <!-- Card 3 -->
+          <div
+            class="flex flex-col justify-center items-center border-2 shadow-md py-10 px-5 space-y-6 rounded-md">
+            <div class="avatar">
+              <div class="w-24 rounded-full mb-3">
+                <img src="images/others/user-3.png" />
+              </div>
+            </div>
+            <p class="text-gray-500 text-center w-4/5">
+              Slate helps you see how many more days you need to work to reach your financial goal
+              for the month and year.
+            </p>
+            <!-- Rating -->
+            <div class="rating">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+                checked="checked" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div>
+            <small class="text-sm font-semibold text-[#23A6F0]">Regina Miles</small>
+            <small class="text-sm font-semibold">Banker</small>
+          </div>
+        </div>
+      </section>
+      <!-- FAQ Section -->
+      <section class="mb-44">
+        <h1 class="font-bold text-5xl text-center mb-16">
+          Frequently Asked<span class="text-primary-color"> Questions</span>
+        </h1>
+        <div class="flex flex-col md:flex-row px-4 gap-4">
+          <div class="flex-1 flex items-center justify-center">
+            <img src="images/others/faq.png" alt="" />
+          </div>
+          <!-- Accordion -->
+          <div class="space-y-3 flex-1">
+            <div class="collapse collapse-arrow border border-blue-100 rounded-lg">
+              <input type="radio" name="my-accordion-2" checked="checked" />
+              <div class="collapse-title text-xl font-medium">
+                What are the most important things I should know about riding a bike?
+              </div>
+              <div class="collapse-content">
+                <p>
+                  Safety First! Always obey the rules of the road. Obey all traffic signals, signs,
+                  and laws. Get in the mindset of “driving” your bike—not just “riding” your bike.
+                  This will help you be a more focused and legally compliant bike rider.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow border border-blue-100 rounded-lg">
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title text-xl font-medium">
+                How can I tell if my helmet is old and I need a new one?
+              </div>
+              <div class="collapse-content">
+                <p>
+                  Safety First! Always obey the rules of the road. Obey all traffic signals, signs,
+                  and laws. Get in the mindset of “driving” your bike—not just “riding” your bike.
+                  This will help you be a more focused and legally compliant bike rider.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow border border-blue-100 rounded-lg">
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title text-xl font-medium">
+                My bike has been in storage is it safe to ride?
+              </div>
+              <div class="collapse-content">
+                <p>
+                  Safety First! Always obey the rules of the road. Obey all traffic signals, signs,
+                  and laws. Get in the mindset of “driving” your bike—not just “riding” your bike.
+                  This will help you be a more focused and legally compliant bike rider.o
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow border border-blue-100 rounded-lg">
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title text-xl font-medium">
+                My bike has been in storage is it safe to ride?
+              </div>
+              <div class="collapse-content">
+                <p>
+                  Safety First! Always obey the rules of the road. Obey all traffic signals, signs,
+                  and laws. Get in the mindset of “driving” your bike—not just “riding” your bike.
+                  This will help you be a more focused and legally compliant bike rider.o
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow border border-blue-100 rounded-lg">
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title text-xl font-medium">
+                My bike has been in storage is it safe to ride?
+              </div>
+              <div class="collapse-content">
+                <p>
+                  Safety First! Always obey the rules of the road. Obey all traffic signals, signs,
+                  and laws. Get in the mindset of “driving” your bike—not just “riding” your bike.
+                  This will help you be a more focused and legally compliant bike rider.o
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Footer Section -->
-    <footer></footer>
+    <footer class="bg-black text-white md:p-32 py-14 px-5">
+      <div class="flex flex-col md:flex-row gap-9 justify-around">
+        <div class="space-y-6">
+          <div class="flex gap-4">
+            <a href="">Download Now</a>
+            <a href="">License</a>
+          </div>
+          <div class="flex gap-4 flex-wrap">
+            <a href="">About</a>
+            <a href="">Features</a>
+            <a href="">Pricing</a>
+            <a href="">Careers</a>
+            <a href="">Help</a>
+            <a href="">Privacy Policy</a>
+          </div>
+          <div>
+            <small>© 2020 bike. All rights reserved</small>
+          </div>
+        </div>
+        <div class="space-y-6">
+          <h4>Get the App</h4>
+          <img src="images/others/ios.png" alt="" width="135px" height="40px" />
+          <img src="images/others/android.png" alt="" width="135px" height="40px" />
+        </div>
+      </div>
+    </footer>
     <script>
       document.querySelectorAll('.carousel a[href^="#slide"]').forEach((link) => {
         link.addEventListener("click", function (e) {
